# hydrovis

./: .gitattributes  .gitignore  .gitlab-ci.yml  Notes.md  README.md  RefactoringNotes.md
Core/: .terraform.lock.hcl  (+6 more)
Source/RnR/: CHANGELOG.md  Dockerfile.app  Dockerfile.docs  Dockerfile.notebook  INSTALL.md  README.md  compose-external-db.yaml  compose.yaml  mkdocs.yml  owp-viz-replace-route.tgz  pyproject.toml  requirements.txt  requirements_notebook.txt
Source/RnR/data/: README.md
Source/RnR/docs/: assimilation.md  common-errors.md  consumer.md  front-end.md  hydrofabric-usage.md  iac.md  index.md  message_broker_cache.md  post-processing.md  publisher.md  t-route-usage.md
Source/RnR/docs/reference/: index.md
Source/RnR/docs/reference/publisher/: client.md  services.md
Source/RnR/docs/user_guide/: index.md  publisher.md
Source/RnR/mock_db/: Dockerfile.mock_db  README.md  init_roles.sql  restore_db.sh
Source/RnR/notebooks/: README.md  test_historical_LID.ipynb
Source/RnR/notebooks/.ipynb_checkpoints/: test_historical_LID-checkpoint.ipynb
Source/RnR/src/rnr/app/: cache.py  consumer_manager.py  main.py  models.py  schemas.py
Source/RnR/src/rnr/app/api/: crud.py  database.py  router.py
Source/RnR/src/rnr/app/core/: cache.py  exceptions.py  logging_module.py  rabbit_connection.py  settings.py  utils.py
Source/RnR/src/rnr/frontend/: main.py
Source/RnR/src/rnr/frontend/api/: router.py  services.py
Source/RnR/src/rnr/frontend/core/: __init__.py  settings.py
Source/RnR/src/rnr/frontend/templates/: csv_data.html  plot_data.html
Source/RnR/terraform/: README.md
Source/RnR/terraform/aws/: main.tf  outputs.tf  variables.tf
Source/RnR/terraform/azure/: main.tf  variables.tf
Source/RnR/terraform/gcp/: main.tf  variables.tf
Source/RnR/tests/: conftest.py  test_consumer.py  test_hfsubset.py  test_nwps_service.py  test_publishing.py  test_redis.py  test_rfc_reader.py  test_rnr_service.py
Source/RnR/tests/notebooks/: test_historical_LID.ipynb
Source/RnR/tests/notebooks/.ipynb_checkpoints/: test_historical_LID-checkpoint.ipynb
Source/RnR/tests/test_data/2930769/: downstream.gpkg
Source/RnR/tests/test_data/replace_and_route/CAGM7/: replace_route.t202408211800z.medium_range.channel_rt.nc  replace_route.t202408211900z.medium_range.channel_rt.nc  (+329 more)
Source/rise/: CHANGELOG.md  Dockerfile.app  Dockerfile.notebook  README.md  compose.yaml  pyproject.toml  requirements.txt  requirements_notebook.txt  run_sfincs.sh
Source/rise/data/NWM/: flowlines_divides.geojson  output_11070103.geojson
Source/rise/data/SFINCS/data_catalogs/: 10m_huc6_lidar.yml
Source/rise/notebooks/: 01_build_sfincs_from_nwm.ipynb  02_post_process.ipynb  03_evaluate_fims.ipynb  deltares_sfincs_setup.ipynb  post_process.ipynb
Source/rise/notebooks/.ipynb_checkpoints/: 02_post_process-checkpoint.ipynb  03_evaluate_fims-checkpoint.ipynb  build_sfincs_from_nwm-checkpoint.ipynb  deltares_sfincs_setup-checkpoint.ipynb  evaluate_fims-checkpoint.ipynb  post_process-checkpoint.ipynb
Source/rise/src/rise/app/: consumer_manager.py  main.py  schemas.py
Source/rise/src/rise/utils/: formatting_sfincs.py  hydrofabric.py
Source/rise/terraform/: README.md
Source/rise/terraform/aws/: main.tf  outputs.tf  variables.tf
(+2280 files in other folders)
