[project]
name = "rnr"
version = "0.1.0"
description = "The replace and route software"
authors = [
    { name = "Tadd.Bindas", email = "Tadd.N.Bindas@rtx.com" }
]
dependencies = [
    "pydantic==2.7.1",
    "fastapi==0.110.1",
    "httpx==0.27.0",
    "geopandas==1.0.1",
    "numpy==1.26.3",
    "pandas==2.2.2",
    "sqlalchemy==2.0.31",
    "pyarrow==15.0.0",
    "xarray==2024.1.1",
    "isort==4.3.21",
    "geoalchemy2==0.15.2",
    "psycopg2-binary==2.9.6",
    "aio-pika==9.4.3",
    "uvicorn==0.30.1",
    "pydantic-settings==2.3.4",
    "redis==5.0.7",
    "pytest==8.3.2",
    "pytest-asyncio==0.23.8",
    "matplotlib==3.9.0",
    "netcdf4==1.6.5",
    "jinja2==3.1.4",
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rnr"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
